Fix residents page hero section h1's overflowing to hero image

--- a/src/assets/scss/pages/residents/residents.scss
+++ b/src/assets/scss/pages/residents/residents.scss
@@ -24,7 +24,7 @@
   }
 }
 
-@media screen and (max-width: 1439px) and (min-width: 992px) {
+@media screen and (max-width: 1649px) and (min-width: 992px) {
   .animation_word-rotation-mask {
     .animated_text {
       top: 153px;
